fix spacing issue

--- a/public/css/gridStyles.css
+++ b/public/css/gridStyles.css
@@ -52,11 +52,6 @@ footer {
 @media screen and (max-width: 700px) {
 
     .main {
-        grid-template-areas:
-            'header'
-            'nav'
-            'bio'
-            'footer';
         grid-template-columns: 1fr;
     }
 
